kubernetes-services/proof-things/healthcheck-nginx-ingress/02_echo-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo-server-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: echo-server.cluster.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: echo-server-svc
            port:
              number: 80
